fix unreadable text

--- a/styles/style.css
+++ b/styles/style.css
@@ -193,7 +193,7 @@ nav {
   width: 100%;
 }
 .home-grid h2 {
-  color: white;
+  color: black;
 }
 .card-img:hover {
   opacity: .6;
